--- a/zjuthesis.tex
+++ b/zjuthesis.tex
@@ -21,38 +21,38 @@
     % Thesis Info
     ClassNumber     = 按中国图书分类法，学位办网上可查,          % 按中国图书分类法，学位办网上可查
     Security        = 注明密级与保密期限,              % 注明密级与保密期限，仅限于论文课题来源于国防军工项目，如没有请填：无
-    StudentName     = 姓名,
-    StudentID       = 学号,
-    AdvisorName     = 指导教师,
-    Grade           = 2014,            % only the year, no '级'
-    Major           = 专业,
-    Department      = 学院,
+    StudentName     = 蒋颜丞,
+    StudentID       = 22310098,
+    AdvisorName     = 冀晓宇,
+    Grade           = 2026,            % only the year, no '级'
+    Major           = 控制理论与控制工程,
+    Department      = 电气工程学院,
     SubmitDate      = 递交日期,
     MajorFormat     = general,
-    Degree          = undergraduate,   % 'undergraduate' or 'graduate'
+    Degree          = graduate,   % 'undergraduate' or 'graduate'
     Type            = thesis,          % 'thesis'   or 'design'
-    Period          = final,           % 'proposal' or 'paper' or 'final'
+    Period          = paper,           % 'proposal' or 'paper' or 'final'
     BlindReview     = false,           % 'false'    or 'true'
     Language        = chinese,         % 'chinese'  or 'english'
     % Graduate Thesis Info
     GradLevel       = master,          % 'master' or 'doctor'
-    Topic           = 研究方向,
-    ColaboratorName = 合作导师,
+    Topic           = 物联网安全,
+    ColaboratorName = 徐文渊,
     % Table of Contents
     ListOfContents  = true,
     ListOfFigures   = true,
     ListOfTables    = true,
     ListOfAlgorithms= false,
     % Title
-    Title           = 毕业论文/设计题目,
-    TitleEng        = {{Graduation Thesis Title}}
+    Title           = 基于恶意物理信号的人机交互系统安全分析,
+    TitleEng        = {{Secure HCI System Based on Malicious Physical Signal}}
 ]{zjuthesis}
 
 %% Uncomment the following lines if you need multi line titles on cover pages
-% \titletwolines{毕业论文题目第一行}{毕业论文题目第二行}
-% \titleengtwolines{English Title Line One}{English Title Line Two}
+\titletwolines{基于恶意物理信号的}{人机交互系统安全分析}
+\titleengtwolines{Secure HCI System Based on}{ Malicious Physical Signal}
 % \titlethreelines{毕业论文题目第一行}{毕业论文题目第二行}{毕业论文题目第三行}
-% \titleengthreelines{English Title Line One}{English Title Line Two}{English Title Line Three}
+% \titleengthreelines{Security Analysis of HCI}{Interaction System Based on}{Malicious Physical Signal Injection}
 
 %% Uncomment the following lines if you need multi line major names on cover pages
 % \majortwolines{专业名第一行}{专业名第二行}
